style: Css validation fix to remove styling backface visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,7 +370,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
   }
   
